# NewtonFractals

./: .gitignore  CMakeLists.txt  README.md
dependencies/: stb_image_write.h
scripts/: benchmark.sh  generate_figures.sh
src/: image.cpp  image.h  main.cpp  newton.h  polynomials.h  timing.h  viewer.cpp
tests/: unit_tests.cpp
